# TyCart

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: basic-ci.yml
cmake/: ToolchainOpts.cmake
lib/pass/: CMakeLists.txt  TyCartPass.cpp  TyCartPass.h
lib/pass/support/: TypeUtil.cpp  TypeUtil.h
lib/runtime/: CMakeLists.txt  Runtime.cpp  TycartAssert.h
lib/support/: Log.h
scripts/: CMakeLists.txt  tycart-tmpl.in
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/pass/: 01_tycart_assert.c  02_tycart_assert_inv.cpp  03_tycart_auto_assert.c  04_tycart_auto_assert_inv.cpp  05_tycart_fti.c  06_tycart_fti_inv.cpp  07_typeart_tycart_assert.c  08_typeart_tycart_assert_inv.cpp  09_tycart_implicit_type.cpp  TycartUtil.h
test/runtime/: 01_assert.c  01_runtime_assert.c  02_assert_fail.c  02_runtime_assert_fail.c  03_runtime_assert_auto.c  04_assert_struct.c  04_runtime_assert_auto_fail.c  05_assert_struct_member.c  06_assert_auto.c  07_assert_auto_fail.c  08_assert_auto_struct.c  09_assert_auto_struct_member.c  10_assert_relaxed.c  11_assert_auto_relaxed.c
